--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ defaults:
 encoding: utf-8 # Make sure the encoding is right
 lang: en-GB # Set the site language
 title: "Shrewdies Site Starter" # Site name or title, also used in jekyll-seo-tag
-logo: "/assets/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
+logo: "/assets/logos/sss-logo.svg" # Site logo, also used in jekyll-seo-tag
 description: "Shrewdies Site Starter is a starting point for Keith Taylor's Jekyll projects. Rather than starting from scratch, this boilerplate helps me maintain consistent websites. It might also help you to start your first JAMstack website." # Site description and default description, also used in jekyll-seo-tag
 url: "https://shrewdies.netlify.com" # Site url, also used in jekyll-seo-tag
 baseurl: ""
@@ -97,10 +97,10 @@ css_inline: true # Will insert all styles into a single <style> block in the <he
 
 # 8. Site favicons & manifest icons
 favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
-  16: '/assets/logos/logo@16px.png'
-  32: '/assets/logos/logo@32px.png'
-  180: '/assets/logos/logo@180px.png'
-  512: '/assets/logos/logo@512px.png'
+  16: '/assets/logos/sss-logo@16px.png'
+  32: '/assets/logos/sss-logo@32px.png'
+  180: '/assets/logos/sss-logo@180px.png'
+  512: '/assets/logos/sss-logo.png'
 
 # 9. Site navigation
 navigation_header:
