--- a/_config.yml
+++ b/_config.yml
@@ -97,10 +97,10 @@ css_inline: true # Will insert all styles into a single <style> block in the <he
 
 # 8. Site favicons & manifest icons
 favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
-  16: '/assets/logos/sss-logo@16px.png'
-  32: '/assets/logos/sss-logo@32px.png'
-  180: '/assets/logos/sss-logo@180px.png'
-  512: '/assets/logos/sss-logo.png'
+  16: '/assets/logos/ash-logo@16px.png'
+  32: '/assets/logos/ash-logo@32px.png'
+  180: '/assets/logos/ash-logo@180px.png'
+  512: '/assets/logos/ash-logo.png'
 
 # 9. Site navigation
 navigation_header:
