--- a/_config.yml
+++ b/_config.yml
@@ -64,11 +64,10 @@ timezone: Europe/London # Timezone for blog posts and alike
 # 5. Collections
 collections:
   posts:
-    title: Posts # Needed for Siteleaf
+    title: Welcome to my anxiety blog # Needed for Siteleaf
     output: true
     description: "Questions, experiences, and opinions about anxiety" # The post list page content
-    feature_text: |
-      #Welcome to my anxiety blog
+    feature_text: "<h2>Anxiety Self Help Blog</h2>
     feature_image: "https://picsum.photos/id/1042/2560/600.webp"
 
 # 6. Jekyll collections settings
